<?xml version="1.0" encoding="utf-8"?>
<com.facebook.fbu.photosphere.sphere.TouchCatcherFrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >

  <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    tools:context=".LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fillViewport="true"
    android:clickable="true"
    >

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
      >

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:layout_margin="@dimen/wide_margin"
        android:orientation="vertical"
        >

        <ImageView
          android:id="@+id/login_header_icon"
          android:layout_width="125dp"
          android:layout_height="125dp"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="@dimen/wide_margin"
          android:layout_centerHorizontal="true"
          android:background="@drawable/splash_sphere"
          />

        <EditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/wide_margin"
          android:hint="@string/username"
          android:inputType="textNoSuggestions"
          android:maxLines="1"
          android:singleLine="true"
          />

        <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"
          android:imeActionId="@+id/edittext_action_login"
          android:inputType="textPassword"
          android:maxLines="1"
          android:singleLine="true"
          />

        <Button
          android:id="@+id/login_button"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="@dimen/element_separation"
          android:background="@color/teal"
          android:paddingLeft="@dimen/button_padding"
          android:paddingRight="@dimen/button_padding"
          android:stateListAnimator="@null"
          android:text="@string/login"
          android:textColorHint="@color/medium_grey"
          android:textColor="@color/white"
          />

        <TextView
          android:id="@+id/forgot_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="@dimen/vertical_margin"
          android:clickable="true"
          android:text="@string/forgotten_password"
          android:textColor="@color/medium_grey"
          />

      </LinearLayout>

      <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/white"
        >

        <TextView
          android:id="@+id/signup_form"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom|center"
          android:clickable="true"
          android:paddingBottom="@dimen/vertical_margin"
          android:text="@string/new_user_link"
          android:textColor="@color/medium_grey"
          />

      </FrameLayout>

    </LinearLayout>

  </ScrollView>

</com.facebook.fbu.photosphere.sphere.TouchCatcherFrameLayout>
