<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/element_separation"
    android:paddingBottom="@dimen/vertical_margin"
    android:clickable="false">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:scaleType="centerCrop"
        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/darker_gray"
            android:scaleType="centerCrop"
            />

        <ImageView
            android:id="@+id/upload_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@mipmap/upload_icon"
            />

      <ImageView
          android:id="@+id/upload_type"
          android:layout_width="16dp"
          android:layout_height="16dp"
          android:layout_margin="8dp"
          android:layout_gravity="left|bottom"
          />

    </FrameLayout>

    <EditText
        android:id="@+id/caption_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:hint="@string/caption"
        android:singleLine="true"
        />

    <TextView
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image_type"
        android:textSize="18dp"
        android:textColor="@color/light_medium_grey"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/upload_radio_buttons"
        >

        <RadioButton
            android:id="@+id/panorama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/panorama"
            android:textSize="14dp"
            android:textColor="@color/light_medium_grey"
            />

        <RadioButton
            android:id="@+id/photosphere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/photosphere"
            android:textSize="14dp"
            android:textColor="@color/light_medium_grey"
            />

    </RadioGroup>

    <Button
        android:id="@+id/post_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@color/teal"
        android:stateListAnimator="@null"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textColorHint="@color/medium_grey"
        />

</LinearLayout>
